@@ -1,13 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST thinking-sphinx-1.4.0.gem 144384 RMD160 a7e0debe0b98fe5efdd6e2e4b5ccb2f3db5fca65 SHA1 d134e8d7740c245ff9b315638d308c2d82cea8d0 SHA256 c177b26eb3903a0c3375bd510b5c086e9bc8c1d783e4cd7c7dea079f04d0912e
-DIST thinking-sphinx-1.4.6.gem 148480 RMD160 0f22404e39e120339d004cc72df8badf073039a6 SHA1 8a53c18f019e003b025778373ffa263cdc6ddb09 SHA256 6ab26a23ed6381f6189143f7c305f78e61b344d0ffdc0fcd09c58d95d2b8b0af
-DIST thinking-sphinx-2.0.11.gem 155136 RMD160 1fa564e34d226dc3099e0ca80659f6f39782ddd0 SHA1 6fece1823e30ca7e8e89aa02f01440ef1553beee SHA256 01e678d8f2016f3fd560c1c3ecc81858b386ca686fca94da307fd3b2e66ac24e
+DIST thinking-sphinx-1.4.0.gem 144384 SHA256 c177b26eb3903a0c3375bd510b5c086e9bc8c1d783e4cd7c7dea079f04d0912e SHA512 44eeeba4f2d80b945d7a42d2298fc2e8cbcaa49039b26fc22465c6d95b2172ce917d70f89c77f662e263d43025415373402d15595031cdd3463a9f1e91f9d295 WHIRLPOOL 038f52512ec78a5a684bc02f038581e315077eb76a3493c94085706ce75b230d92467b4243a61a88a4027b3200fefe2a73700573372580c65ea7b886f7912599
+DIST thinking-sphinx-1.4.6.gem 148480 SHA256 6ab26a23ed6381f6189143f7c305f78e61b344d0ffdc0fcd09c58d95d2b8b0af SHA512 413780c7f0885b696ec035d94e51a1aaa20626271b9e95d9ff1b8acb7237524a06cf1de8aafcb6b3011d204386db69dcd2da608e38f354aa40fa6c63fded2a0d WHIRLPOOL cba01f6f7de01bcfac8cbbc82b02960981bdb08304f16eab5b971eed05db7af24a4754cc8d7ba97b68e12b4499f674dbbd29b41180e812810a35350e7b750698
+DIST thinking-sphinx-2.0.11.gem 155136 SHA256 01e678d8f2016f3fd560c1c3ecc81858b386ca686fca94da307fd3b2e66ac24e SHA512 3cae87ea0d078f4758615d24d8877d04d54d0f3a81180596161ada36f64f80089fd5b49bd4e8bc91ba9d6df7b42e48ec1146eafa3cebe15ff79f68c5e2a596c3 WHIRLPOOL 75c8f5660c7f39623c8b346d5cddd4aaa61b1172aed50d4d42a6177db8fbbe10642d61db1217cb63d4fa4044621619a8aa6569833a239fbd3c83c23d5f4b625f
+DIST thinking-sphinx-2.0.13.gem 156672 SHA256 dbb0c368469fe85e78c9408c709c65c6523e38c293754589970cd64fc23cf886 SHA512 a10b2b0950153b3804c85bd45793d022ec40120bcded4520066871e4513734bef9c587ccc02430211c1f06d5804ad722d4521fa9e81f7596b71214d225e3a066 WHIRLPOOL fba0fd0df2680584f633ed068cb74967642dd064abf1d8dd4ff7d3c87dfe3400e969e9003da5d31d1f70d99c50e8c024895451d495e2b532632e1be5ec3a7258
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk/Rk9cACgkQiIP6VqMIqNfwgAD9E72Pr7E59Xrv1KHoSHItKNGx
-Kau8GzJXR6Wmk2lJSz8A/1PCBBEuqz+3AdSM8v0Hrnsn0IPH2P6M+gHD7mBGHXHh
-=MLy9
+iF4EAREIAAYFAlBTJ9IACgkQiIP6VqMIqNfqNwD/YBPeQcVJW74ljLD+UALoFTWk
+wxRlrmjzmcfMvqCRUSAA/3Zn72v4SHpMCO5T7Ane+FR5tiO1Z7z1mLu6Ke9HCLEH
+=cChh
 -----END PGP SIGNATURE-----
